force-app/main/default/objects/IT_Triage_Rule__mdt/IT_Triage_Rule__mdt.object-meta.xml
<CustomObject>
    <label>IT Triage Rule</label>
    <pluralLabel>IT Triage Rules</pluralLabel>
</CustomObject>