force-app/main/default/objects/IT_Triage_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Only active rules are evaluated. Deactivate instead of deleting to preserve history.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>