force-app/main/default/objects/IT_Triage_Rule__mdt/fields/Evaluation_Order__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Order__c</fullName>
    <description
  >Rules are evaluated ascending by this number; first match wins. Use gaps of 10 to leave room for future inserts.</description>
    <label>Evaluation Order</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>