force-app/main/default/objects/IT_Triage_Rule__mdt/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <description
  >Case-insensitive substring searched in IT_Request__c.Issue_Description__c. Leave blank to match every request (useful as a catch-all with a high Evaluation Order).</description>
    <label>Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>