force-app/main/default/objects/IT_Triage_Rule__mdt/fields/Priority_Filter__c.field-meta.xml
<CustomField>
    <fullName>Priority_Filter__c</fullName>
    <description
  >Optional Priority__c value the request must match for this rule to fire (Low, Medium, High, Critical). Blank matches any priority.</description>
    <label>Priority Filter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>