force-app/main/default/objects/IT_Triage_Rule__mdt/fields/Target_Queue_DevName__c.field-meta.xml
<CustomField>
    <fullName>Target_Queue_DevName__c</fullName>
    <description
  >DeveloperName of the Queue to assign as OwnerId. Blank leaves ownership on the running user.</description>
    <label>Target Queue Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>