force-app/main/default/objects/IT_Triage_Rule__mdt/fields/Target_Tier__c.field-meta.xml
<CustomField>
    <fullName>Target_Tier__c</fullName>
    <description
  >Assigned_Tier__c value to stamp when this rule matches. Must be one of: Tier 1, Tier 2, Tier 3.</description>
    <label>Target Tier</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>